[gd_scene load_steps=13 format=3 uid="uid://bbehnt4siping"]

[ext_resource type="Script" uid="uid://dlxc4paqpmjoh" path="res://Scripts/fase_5.gd" id="1_36uxa"]
[ext_resource type="Texture2D" uid="uid://c4mi1353etrll" path="res://Sprites/Tilemap Prisma Jones.png" id="1_jr2ml"]
[ext_resource type="PackedScene" uid="uid://hv6uxo3aivh3" path="res://Scenes/prisma.tscn" id="2_jdrna"]
[ext_resource type="PackedScene" uid="uid://dchq7m06fwvgx" path="res://Scenes/porta_34.tscn" id="3_50aes"]
[ext_resource type="PackedScene" uid="uid://cr2yjjgv6uyu" path="res://Scenes/pillar_man.tscn" id="4_a8mqw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jdrna"]
texture = ExtResource("1_jr2ml")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -6.987419, -6.760975, -6.9550705, -6.8580227, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -6.987419, -8, -7.1067886)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(7.0560255, 8, 6.852975, -7.0052624, -8, -6.903737, -8, -8, 8, -8, 8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.9392443, -5.786956, 5.837718, -8, 8, -8, 8, -5.5839047)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.888481, -8, -8, -5.1270404, -8, -5.1270404, -5.990007)
5:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.106785, -8, -7.106785, 8, -8, 8, -8, -8)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(7.0560255, 8, 6.9544992, -8, 8, -8, 8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.431617, 8, 5.533141, 5.3808537, 8, 5.2793293, 8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, 5.177803, -5.431617, 5.177803, -5.3300915, 8)
5:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.106785, -8, -7.0052605, 7.1067867, 8, 7.208315, 8, 8, -8, 8, -8, -8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 7.208315, 8, 7.208315, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 7.208315, 6.7514486, 7.0052624, 6.9544992, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, 5.177803, -5.431617, 5.177803, -5.3300915, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.431617, 8, 5.533141, 5.3808537, 8, 5.2793293, 8, 8)
5:2/0 = 0
0:3/0 = 0
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.2793283, -8, -8, -5.9900074, -8, -5.7869563, -5.2793283)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.482379, -5.990007, 5.482379, -8, 8, -8, 8, -5.5839047)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_50aes"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_jdrna")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8mqw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_36uxa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5nxeq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_di7eg"]
size = Vector2(20, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5ohk"]
size = Vector2(34, 82)

[node name="Fase_5" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_36uxa")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_50aes")
format = 2
layer_0/name = "Layer1"
layer_0/tile_data = PackedInt32Array(-2, 327680, 0, 65534, 327680, 0, 131070, 327680, 0, 196606, 327680, 0, 262142, 327680, 0, 327678, 327680, 0, 393214, 327680, 0, 458750, 327680, 0, 524286, 327680, 0, 589822, 327680, 0, 655358, 327680, 0, 720894, 327680, 0, -1, 327680, 0, 65535, 327680, 0, 131071, 327680, 0, 196607, 327680, 0, 262143, 327680, 0, 327679, 327680, 0, 393215, 327680, 0, 458751, 327680, 0, 524287, 327680, 0, 589823, 327680, 0, 655359, 327680, 0, 720895, 327680, 0, -65536, 327680, 0, 0, 327680, 0, 65536, 327680, 0, 131072, 327680, 0, 196608, 327680, 0, 262144, 327680, 0, 327680, 327680, 0, 393216, 327680, 0, 458752, 327680, 0, 524288, 327680, 0, 589824, 327680, 0, 655360, 327680, 0, -65535, 327680, 0, 1, 327680, 0, 65537, 327680, 0, 131073, 327680, 0, 196609, 327680, 0, 262145, 327680, 0, 327681, 327680, 0, 393217, 327680, 0, 458753, 327680, 0, 524289, 327680, 0, 589825, 327680, 0, 655361, 327680, 0, -65534, 327680, 0, 2, 327680, 0, 65538, 327680, 0, 131074, 327680, 0, 196610, 327680, 0, 262146, 327680, 0, 327682, 327680, 0, 393218, 327680, 0, 458754, 327680, 0, 524290, 327680, 0, 589826, 327680, 0, 655362, 327680, 0, -65533, 327680, 0, 3, 327680, 0, 65539, 327680, 0, 131075, 327680, 0, 196611, 327680, 0, 262147, 327680, 0, 327683, 327680, 0, 393219, 327680, 0, 458755, 327680, 0, 524291, 327680, 0, 589827, 327680, 0, 655363, 327680, 0, -65532, 327680, 0, 4, 327680, 0, 65540, 327680, 0, 131076, 327680, 0, 196612, 327680, 0, 262148, 327680, 0, 327684, 327680, 0, 393220, 327680, 0, 458756, 327680, 0, 524292, 327680, 0, 589828, 327680, 0, 655364, 327680, 0, -65531, 327680, 0, 5, 327680, 0, 65541, 327680, 0, 131077, 327680, 0, 196613, 327680, 0, 262149, 327680, 0, 327685, 327680, 0, 393221, 327680, 0, 458757, 327680, 0, 524293, 327680, 0, 589829, 327680, 0, 655365, 327680, 0, -65530, 327680, 0, 6, 327680, 0, 65542, 327680, 0, 131078, 327680, 0, 196614, 327680, 0, 262150, 327680, 0, 327686, 327680, 0, 393222, 327680, 0, 458758, 327680, 0, 524294, 327680, 0, 589830, 327680, 0, 655366, 327680, 0, -65529, 327680, 0, 7, 327680, 0, 65543, 327680, 0, 131079, 327680, 0, 196615, 327680, 0, 262151, 327680, 0, 327687, 327680, 0, 393223, 327680, 0, 458759, 327680, 0, 524295, 327680, 0, 589831, 327680, 0, 655367, 327680, 0, -65528, 327680, 0, 8, 327680, 0, 65544, 327680, 0, 131080, 327680, 0, 196616, 327680, 0, 262152, 327680, 0, 327688, 327680, 0, 393224, 327680, 0, 458760, 327680, 0, 524296, 327680, 0, 589832, 327680, 0, 655368, 327680, 0, -65527, 327680, 0, 9, 327680, 0, 65545, 327680, 0, 131081, 327680, 0, 196617, 327680, 0, 262153, 327680, 0, 327689, 327680, 0, 393225, 327680, 0, 458761, 327680, 0, 524297, 327680, 0, 589833, 327680, 0, 655369, 327680, 0, -65526, 327680, 0, 10, 327680, 0, 65546, 327680, 0, 131082, 327680, 0, 196618, 327680, 0, 262154, 327680, 0, 327690, 327680, 0, 393226, 327680, 0, 458762, 327680, 0, 524298, 327680, 0, 589834, 327680, 0, 655370, 327680, 0, -65525, 327680, 0, 11, 327680, 0, 65547, 327680, 0, 131083, 327680, 0, 196619, 327680, 0, 262155, 327680, 0, 327691, 327680, 0, 393227, 327680, 0, 458763, 327680, 0, 524299, 327680, 0, 589835, 327680, 0, 655371, 327680, 0, -65524, 327680, 0, 12, 327680, 0, 65548, 327680, 0, 131084, 327680, 0, 196620, 327680, 0, 262156, 327680, 0, 327692, 327680, 0, 393228, 327680, 0, 458764, 327680, 0, 524300, 327680, 0, 589836, 327680, 0, 655372, 327680, 0, -65523, 327680, 0, 13, 327680, 0, 65549, 327680, 0, 131085, 327680, 0, 196621, 327680, 0, 262157, 327680, 0, 327693, 327680, 0, 393229, 327680, 0, 458765, 327680, 0, 524301, 327680, 0, 589837, 327680, 0, 655373, 327680, 0, -65522, 327680, 0, 14, 327680, 0, 65550, 327680, 0, 131086, 327680, 0, 196622, 327680, 0, 262158, 327680, 0, 327694, 327680, 0, 393230, 327680, 0, 458766, 327680, 0, 524302, 327680, 0, 589838, 327680, 0, 655374, 327680, 0, -65521, 327680, 0, 15, 327680, 0, 65551, 327680, 0, 131087, 327680, 0, 196623, 327680, 0, 262159, 327680, 0, 327695, 327680, 0, 393231, 327680, 0, 458767, 327680, 0, 524303, 327680, 0, 589839, 327680, 0, 655375, 327680, 0, -65520, 327680, 0, 16, 327680, 0, 65552, 327680, 0, 131088, 327680, 0, 196624, 327680, 0, 262160, 327680, 0, 327696, 327680, 0, 393232, 327680, 0, 458768, 327680, 0, 524304, 327680, 0, 589840, 327680, 0, 655376, 327680, 0, -65519, 327680, 0, 17, 327680, 0, 65553, 327680, 0, 131089, 327680, 0, 196625, 327680, 0, 262161, 327680, 0, 327697, 327680, 0, 393233, 327680, 0, 458769, 327680, 0, 524305, 327680, 0, 589841, 327680, 0, 655377, 327680, 0, -65518, 327680, 0, 18, 327680, 0, 65554, 327680, 0, 131090, 327680, 0, 196626, 327680, 0, 262162, 327680, 0, 327698, 327680, 0, 393234, 327680, 0, 458770, 327680, 0, 524306, 327680, 0, 589842, 327680, 0, 655378, 327680, 0, -65517, 327680, 0, 19, 327680, 0, 65555, 327680, 0, 131091, 327680, 0, 196627, 327680, 0, 262163, 327680, 0, 327699, 327680, 0, 393235, 327680, 0, 458771, 327680, 0, 524307, 327680, 0, 589843, 327680, 0, 655379, 327680, 0, -65516, 327680, 0, 20, 327680, 0, 65556, 327680, 0, 131092, 327680, 0, 196628, 327680, 0, 262164, 327680, 0, 327700, 327680, 0, 393236, 327680, 0, 458772, 327680, 0, 524308, 327680, 0, 589844, 327680, 0, 655380, 327680, 0, -65515, 327680, 0, 21, 327680, 0, 65557, 327680, 0, 131093, 327680, 0, 196629, 327680, 0, 262165, 327680, 0, 327701, 327680, 0, 393237, 327680, 0, 458773, 327680, 0, 524309, 327680, 0, 589845, 327680, 0, 655381, 327680, 0, -327682, 327680, 0, -262146, 327680, 0, -196610, 327680, 0, -131074, 327680, 0, -65538, 327680, 0, -327681, 327680, 0, -262145, 327680, 0, -196609, 327680, 0, -131073, 327680, 0, -65537, 327680, 0, -393216, 327680, 0, -327680, 327680, 0, -262144, 327680, 0, -196608, 327680, 0, -131072, 327680, 0, -393215, 327680, 0, -327679, 327680, 0, -262143, 327680, 0, -196607, 327680, 0, -131071, 327680, 0, -393214, 327680, 0, -327678, 327680, 0, -262142, 327680, 0, -196606, 327680, 0, -131070, 327680, 0, -393213, 327680, 0, -327677, 327680, 0, -262141, 327680, 0, -196605, 327680, 0, -131069, 327680, 0, -393212, 327680, 0, -327676, 327680, 0, -262140, 327680, 0, -196604, 327680, 0, -131068, 327680, 0, -393211, 327680, 0, -327675, 327680, 0, -262139, 327680, 0, -196603, 327680, 0, -131067, 327680, 0, -393210, 327680, 0, -327674, 327680, 0, -262138, 327680, 0, -196602, 327680, 0, -131066, 327680, 0, -393209, 327680, 0, -327673, 327680, 0, -262137, 327680, 0, -196601, 327680, 0, -131065, 327680, 0, -393208, 327680, 0, -327672, 327680, 0, -262136, 327680, 0, -196600, 327680, 0, -131064, 327680, 0, -393207, 327680, 0, -327671, 327680, 0, -262135, 327680, 0, -196599, 327680, 0, -131063, 327680, 0, -393206, 327680, 0, -327670, 327680, 0, -262134, 327680, 0, -196598, 327680, 0, -131062, 327680, 0, -393205, 327680, 0, -327669, 327680, 0, -262133, 327680, 0, -196597, 327680, 0, -131061, 327680, 0, -393204, 327680, 0, -327668, 327680, 0, -262132, 327680, 0, -196596, 327680, 0, -131060, 327680, 0, -393203, 327680, 0, -327667, 327680, 0, -262131, 327680, 0, -196595, 327680, 0, -131059, 327680, 0, -393202, 327680, 0, -327666, 327680, 0, -262130, 327680, 0, -196594, 327680, 0, -131058, 327680, 0, -393201, 327680, 0, -327665, 327680, 0, -262129, 327680, 0, -196593, 327680, 0, -131057, 327680, 0, -393200, 327680, 0, -327664, 327680, 0, -262128, 327680, 0, -196592, 327680, 0, -131056, 327680, 0, -393199, 327680, 0, -327663, 327680, 0, -262127, 327680, 0, -196591, 327680, 0, -131055, 327680, 0, -393198, 327680, 0, -327662, 327680, 0, -262126, 327680, 0, -196590, 327680, 0, -131054, 327680, 0, -393197, 327680, 0, -327661, 327680, 0, -262125, 327680, 0, -196589, 327680, 0, -131053, 327680, 0, -393196, 327680, 0, -327660, 327680, 0, -262124, 327680, 0, -196588, 327680, 0, -131052, 327680, 0, -393195, 327680, 0, -327659, 327680, 0, -262123, 327680, 0, -196587, 327680, 0, -131051, 327680, 0, 786430, 327680, 0, 851966, 327680, 0, 917502, 327680, 0, 983038, 327680, 0, 1048574, 327680, 0, 1114110, 327680, 0, 1179646, 327680, 0, 786431, 327680, 0, 851967, 327680, 0, 917503, 327680, 0, 983039, 327680, 0, 1048575, 327680, 0, 1114111, 327680, 0, 1179647, 327680, 0, 720896, 327680, 0, 786432, 327680, 0, 851968, 327680, 0, 917504, 327680, 0, 983040, 327680, 0, 1048576, 327680, 0, 1114112, 327680, 0, 720897, 327680, 0, 786433, 327680, 0, 851969, 327680, 0, 917505, 327680, 0, 983041, 327680, 0, 1114113, 327680, 0, 720898, 327680, 0, 786434, 327680, 0, 851970, 327680, 0, 917506, 327680, 0, 983042, 327680, 0, 1114114, 327680, 0, 720899, 327680, 0, 786435, 327680, 0, 851971, 327680, 0, 917507, 327680, 0, 983043, 327680, 0, 1048579, 327680, 0, 1114115, 327680, 0, 720900, 327680, 0, 786436, 327680, 0, 851972, 327680, 0, 917508, 327680, 0, 983044, 327680, 0, 1048580, 327680, 0, 1114116, 327680, 0, 720901, 327680, 0, 786437, 327680, 0, 851973, 327680, 0, 917509, 327680, 0, 983045, 327680, 0, 1048581, 327680, 0, 1114117, 327680, 0, 720902, 327680, 0, 786438, 327680, 0, 851974, 327680, 0, 917510, 327680, 0, 983046, 327680, 0, 1048582, 327680, 0, 1114118, 327680, 0, 720903, 327680, 0, 786439, 327680, 0, 851975, 327680, 0, 917511, 327680, 0, 983047, 327680, 0, 1048583, 327680, 0, 1114119, 327680, 0, 720904, 327680, 0, 786440, 327680, 0, 851976, 327680, 0, 917512, 327680, 0, 983048, 327680, 0, 1048584, 327680, 0, 1114120, 327680, 0, 720905, 327680, 0, 786441, 327680, 0, 851977, 327680, 0, 917513, 327680, 0, 983049, 327680, 0, 1048585, 327680, 0, 1114121, 327680, 0, 720906, 327680, 0, 786442, 327680, 0, 851978, 327680, 0, 917514, 327680, 0, 983050, 327680, 0, 1048586, 327680, 0, 1114122, 327680, 0, 720907, 327680, 0, 786443, 327680, 0, 851979, 327680, 0, 917515, 327680, 0, 983051, 327680, 0, 1048587, 327680, 0, 1114123, 327680, 0, 720908, 327680, 0, 786444, 327680, 0, 851980, 327680, 0, 917516, 327680, 0, 983052, 327680, 0, 1048588, 327680, 0, 1114124, 327680, 0, 720909, 327680, 0, 786445, 327680, 0, 851981, 327680, 0, 917517, 327680, 0, 983053, 327680, 0, 1048589, 327680, 0, 1114125, 327680, 0, 720910, 327680, 0, 786446, 327680, 0, 851982, 327680, 0, 917518, 327680, 0, 983054, 327680, 0, 1048590, 327680, 0, 1114126, 327680, 0, 720911, 327680, 0, 786447, 327680, 0, 851983, 327680, 0, 917519, 327680, 0, 983055, 327680, 0, 1048591, 327680, 0, 1114127, 327680, 0, 720912, 327680, 0, 786448, 327680, 0, 851984, 327680, 0, 917520, 327680, 0, 983056, 327680, 0, 1048592, 327680, 0, 1114128, 327680, 0, 720913, 327680, 0, 786449, 327680, 0, 851985, 327680, 0, 917521, 327680, 0, 983057, 327680, 0, 1048593, 327680, 0, 1114129, 327680, 0, 720914, 327680, 0, 786450, 327680, 0, 851986, 327680, 0, 917522, 327680, 0, 983058, 327680, 0, 1048594, 327680, 0, 1114130, 327680, 0, 720915, 327680, 0, 786451, 327680, 0, 851987, 327680, 0, 917523, 327680, 0, 983059, 327680, 0, 1048595, 327680, 0, 1114131, 327680, 0, 720916, 327680, 0, 786452, 327680, 0, 851988, 327680, 0, 917524, 327680, 0, 983060, 327680, 0, 1048596, 327680, 0, 1114132, 327680, 0, 720917, 327680, 0, 786453, 327680, 0, 851989, 327680, 0, 917525, 327680, 0, 983061, 327680, 0, 1048597, 327680, 0, 1114133, 327680, 0, -524290, 327680, 0, -458754, 327680, 0, -393218, 327680, 0, -524289, 327680, 0, -458753, 327680, 0, -393217, 327680, 0, -589824, 327680, 0, -524288, 327680, 0, -458752, 327680, 0, -589823, 327680, 0, -524287, 327680, 0, -458751, 327680, 0, -589822, 327680, 0, -524286, 327680, 0, -458750, 327680, 0, -589821, 327680, 0, -524285, 327680, 0, -458749, 327680, 0, -589820, 327680, 0, -524284, 327680, 0, -458748, 327680, 0, -589819, 327680, 0, -524283, 327680, 0, -458747, 327680, 0, -589818, 327680, 0, -524282, 327680, 0, -458746, 327680, 0, -589817, 327680, 0, -524281, 327680, 0, -458745, 327680, 0, -589816, 327680, 0, -524280, 327680, 0, -458744, 327680, 0, -589815, 327680, 0, -524279, 327680, 0, -458743, 327680, 0, -589814, 327680, 0, -524278, 327680, 0, -458742, 327680, 0, -589813, 327680, 0, -524277, 327680, 0, -458741, 327680, 0, -589812, 327680, 0, -524276, 327680, 0, -458740, 327680, 0, -589811, 327680, 0, -524275, 327680, 0, -458739, 327680, 0, -589810, 327680, 0, -524274, 327680, 0, -458738, 327680, 0, -589809, 327680, 0, -524273, 327680, 0, -458737, 327680, 0, -589808, 327680, 0, -524272, 327680, 0, -458736, 327680, 0, -589807, 327680, 0, -524271, 327680, 0, -458735, 327680, 0, -589806, 327680, 0, -524270, 327680, 0, -458734, 327680, 0, -589805, 327680, 0, -524269, 327680, 0, -458733, 327680, 0, -589804, 327680, 0, -524268, 327680, 0, -458732, 327680, 0, -589803, 327680, 0, -524267, 327680, 0, -458731, 327680, 0, 1048577, 327680, 0, 1048578, 327680, 0, 65523, 327680, 0, 131059, 327680, 0, 196595, 327680, 0, 262131, 327680, 0, 327667, 327680, 0, 393203, 327680, 0, 458739, 327680, 0, 524275, 327680, 0, 589811, 327680, 0, 655347, 327680, 0, 720883, 327680, 0, 786419, 327680, 0, 851955, 327680, 0, 917491, 327680, 0, 983027, 327680, 0, 1048563, 327680, 0, 1114099, 327680, 0, 1179635, 327680, 0, 65524, 327680, 0, 131060, 327680, 0, 196596, 327680, 0, 262132, 327680, 0, 327668, 327680, 0, 393204, 327680, 0, 458740, 327680, 0, 524276, 327680, 0, 589812, 327680, 0, 655348, 327680, 0, 720884, 327680, 0, 786420, 327680, 0, 851956, 327680, 0, 917492, 327680, 0, 983028, 327680, 0, 1048564, 327680, 0, 1114100, 327680, 0, 1179636, 327680, 0, 65525, 327680, 0, 131061, 327680, 0, 196597, 327680, 0, 262133, 327680, 0, 327669, 327680, 0, 393205, 327680, 0, 458741, 327680, 0, 524277, 327680, 0, 589813, 327680, 0, 655349, 327680, 0, 720885, 327680, 0, 786421, 327680, 0, 851957, 327680, 0, 917493, 327680, 0, 983029, 327680, 0, 1048565, 327680, 0, 1114101, 327680, 0, 1179637, 327680, 0, 65526, 327680, 0, 131062, 327680, 0, 196598, 327680, 0, 262134, 327680, 0, 327670, 327680, 0, 393206, 327680, 0, 458742, 327680, 0, 524278, 327680, 0, 589814, 327680, 0, 655350, 327680, 0, 720886, 327680, 0, 786422, 327680, 0, 851958, 327680, 0, 917494, 327680, 0, 983030, 327680, 0, 1048566, 327680, 0, 1114102, 327680, 0, 1179638, 327680, 0, 65527, 327680, 0, 131063, 327680, 0, 196599, 327680, 0, 262135, 327680, 0, 327671, 327680, 0, 393207, 327680, 0, 458743, 327680, 0, 524279, 327680, 0, 589815, 327680, 0, 655351, 327680, 0, 720887, 327680, 0, 786423, 327680, 0, 851959, 327680, 0, 917495, 327680, 0, 983031, 327680, 0, 1048567, 327680, 0, 1114103, 327680, 0, 1179639, 327680, 0, 65528, 327680, 0, 131064, 327680, 0, 196600, 327680, 0, 262136, 327680, 0, 327672, 327680, 0, 393208, 327680, 0, 458744, 327680, 0, 524280, 327680, 0, 589816, 327680, 0, 655352, 327680, 0, 720888, 327680, 0, 786424, 327680, 0, 851960, 327680, 0, 917496, 327680, 0, 983032, 327680, 0, 1048568, 327680, 0, 1114104, 327680, 0, 1179640, 327680, 0, 65529, 327680, 0, 131065, 327680, 0, 196601, 327680, 0, 262137, 327680, 0, 327673, 327680, 0, 393209, 327680, 0, 458745, 327680, 0, 524281, 327680, 0, 589817, 327680, 0, 655353, 327680, 0, 720889, 327680, 0, 786425, 327680, 0, 851961, 327680, 0, 917497, 327680, 0, 983033, 327680, 0, 1048569, 327680, 0, 1114105, 327680, 0, 1179641, 327680, 0, 65530, 327680, 0, 131066, 327680, 0, 196602, 327680, 0, 262138, 327680, 0, 327674, 327680, 0, 393210, 327680, 0, 458746, 327680, 0, 524282, 327680, 0, 589818, 327680, 0, 655354, 327680, 0, 720890, 327680, 0, 786426, 327680, 0, 851962, 327680, 0, 917498, 327680, 0, 983034, 327680, 0, 1048570, 327680, 0, 1114106, 327680, 0, 1179642, 327680, 0, 65531, 327680, 0, 131067, 327680, 0, 196603, 327680, 0, 262139, 327680, 0, 327675, 327680, 0, 393211, 327680, 0, 458747, 327680, 0, 524283, 327680, 0, 589819, 327680, 0, 655355, 327680, 0, 720891, 327680, 0, 786427, 327680, 0, 851963, 327680, 0, 917499, 327680, 0, 983035, 327680, 0, 1048571, 327680, 0, 1114107, 327680, 0, 1179643, 327680, 0, 65532, 327680, 0, 131068, 327680, 0, 196604, 327680, 0, 262140, 327680, 0, 327676, 327680, 0, 393212, 327680, 0, 458748, 327680, 0, 524284, 327680, 0, 589820, 327680, 0, 655356, 327680, 0, 720892, 327680, 0, 786428, 327680, 0, 851964, 327680, 0, 917500, 327680, 0, 983036, 327680, 0, 1048572, 327680, 0, 1114108, 327680, 0, 1179644, 327680, 0, 65533, 327680, 0, 131069, 327680, 0, 196605, 327680, 0, 262141, 327680, 0, 327677, 327680, 0, 393213, 327680, 0, 458749, 327680, 0, 524285, 327680, 0, 589821, 327680, 0, 655357, 327680, 0, 720893, 327680, 0, 786429, 327680, 0, 851965, 327680, 0, 917501, 327680, 0, 983037, 327680, 0, 1048573, 327680, 0, 1114109, 327680, 0, 1179645, 327680, 0)
layer_1/name = "Layer0"
layer_1/tile_data = PackedInt32Array(1048584, 131072, 1, 1048583, 0, 1, 786439, 262144, 1, 851975, 0, 1, 917511, 0, 1, 983047, 0, 1, 786440, 196608, 1, 851976, 131072, 1, 917512, 196608, 0, 983048, 196608, 1, 1114119, 131072, 3, 1114120, 131072, 3, 786441, 65536, 2, 786438, 65536, 2, 786435, 65536, 2, 786436, 65536, 2, 786437, 65536, 2, 589826, 0, 1, 655362, 0, 1, 720898, 0, 1, 786434, 0, 2, 458754, 0, 0, 524290, 0, 1, 458755, 65536, 0, 458756, 65536, 0, 458757, 65536, 0, 458758, 65536, 0, 458759, 65536, 0, 458760, 65536, 0, 458761, 65536, 0, 458762, 65536, 0, 458763, 65536, 0, 458764, 65536, 0, 786442, 65536, 2, 786443, 65536, 2, 786444, 65536, 2, 786445, 131072, 2, 524301, 131072, 1, 589837, 131072, 1, 655373, 131072, 1, 720909, 131072, 1, 458765, 131072, 0, 524291, 65536, 1, 589827, 65536, 1, 655363, 65536, 1, 720899, 65536, 1, 524292, 65536, 1, 589828, 65536, 1, 655364, 65536, 1, 720900, 65536, 1, 524293, 65536, 1, 589829, 65536, 1, 655365, 65536, 1, 720901, 65536, 1, 524294, 65536, 1, 589830, 65536, 1, 655366, 65536, 1, 720902, 65536, 1, 524295, 65536, 1, 589831, 65536, 1, 655367, 65536, 1, 720903, 65536, 1, 524296, 65536, 1, 589832, 65536, 1, 655368, 65536, 1, 720904, 65536, 1, 524297, 65536, 1, 589833, 65536, 1, 655369, 65536, 1, 720905, 65536, 1, 524298, 65536, 1, 589834, 65536, 1, 655370, 65536, 1, 720906, 65536, 1, 524299, 65536, 1, 589835, 65536, 1, 655371, 65536, 1, 720907, 65536, 1, 524300, 65536, 1, 589836, 65536, 1, 655372, 65536, 1, 720908, 65536, 1, 983049, 65536, 2, 983050, 65536, 2, 983051, 65536, 2, 983052, 65536, 2, 983053, 65536, 2, 983054, 65536, 2, 983055, 65536, 2, 983056, 65536, 2, 983057, 65536, 2, 983058, 65536, 2, 983059, 65536, 2, 983060, 65536, 2, 917513, 65536, 0, 917514, 65536, 0, 917515, 65536, 0, 917516, 65536, 0, 917517, 65536, 0, 917518, 65536, 0, 917519, 65536, 0, 917520, 65536, 0, 917521, 65536, 0, 917522, 65536, 0, 917523, 65536, 0, 917524, 65536, 0)

[node name="Prisma" parent="." instance=ExtResource("2_jdrna")]
position = Vector2(256, 512)
scale = Vector2(2, 2)

[node name="Camera2D" type="Camera2D" parent="Prisma"]
limit_right = 704
limit_bottom = 544

[node name="porta_34" parent="." instance=ExtResource("3_50aes")]
position = Vector2(640, 456)
scale = Vector2(3, 3)

[node name="botao 1" type="Area2D" parent="."]
position = Vector2(128, 272)

[node name="pillar_man" parent="botao 1" instance=ExtResource("4_a8mqw")]
position = Vector2(0, 1.5258789e-05)
scale = Vector2(1.5, 1.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="botao 1"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_a8mqw")

[node name="botao_2" type="Area2D" parent="."]
position = Vector2(320, 352)

[node name="pillar_man_2" parent="botao_2" instance=ExtResource("4_a8mqw")]
scale = Vector2(1.5, 1.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="botao_2"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_36uxa")

[node name="botao_3" type="Area2D" parent="."]
position = Vector2(424, 224)

[node name="pillar_man_3" parent="botao_3" instance=ExtResource("4_a8mqw")]
scale = Vector2(1.5, 1.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="botao_3"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_5nxeq")

[node name="tochas" type="Node" parent="."]

[node name="bloqueio" type="StaticBody2D" parent="."]
position = Vector2(640, 456)

[node name="CollisionShape2D" type="CollisionShape2D" parent="bloqueio"]
position = Vector2(0, 23)
shape = SubResource("RectangleShape2D_di7eg")

[node name="prox_area" type="Area2D" parent="."]
position = Vector2(672, 504)

[node name="teleport" type="CollisionShape2D" parent="prox_area"]
position = Vector2(7, -31)
shape = SubResource("RectangleShape2D_q5ohk")

[connection signal="area_entered" from="botao 1" to="." method="_on_botao_1_area_entered"]
[connection signal="area_entered" from="botao_2" to="." method="_on_botao_2_area_entered"]
[connection signal="area_entered" from="botao_3" to="." method="_on_botao_3_area_entered"]
[connection signal="body_entered" from="prox_area" to="." method="_on_prox_area_body_entered"]
